# acqbench

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
graphs/: README.md  SHA256SUMS  benicia-100.ttl  benicia.ttl  watertap-seawater-ro.ttl
matrices/: ab-check.toml  app-scale-ext.toml  app-scale-main16.toml  app-scale-ums-extreme.toml  app-scale-vm.toml  app-scale.toml  app-task.toml  branch-vs-baseline.toml  driver-tick-resume.toml  driver-tick.toml  full.toml  ingest-query.toml  queries.toml  smoke.toml
reports/: app-scale.html  app-task.html  driver-tick.html  ingest-query.html
results/: app.jsonl  apptask.jsonl  dt.jsonl  environment.json  iq.jsonl
src/acqbench/: __init__.py  bench_app.py  bench_driver.py  cli.py  datagen.py  logparse.py  matrixfile.py  metrics.py  protocol.py  provision.py  queries.py  receiver.py  render.py  report.py  results.py  run_bench.py  runner.py  server.py  services.py  spec.py  template.py
src/acqbench/workloads/: __init__.py  app_scale.py  base.py  driver_tick.py  graph.py  ingest_query.py  query.py  read.py  startup.py  write.py
tests/: test_datagen.py  test_driver_grid.py  test_graphs.py  test_logparse.py  test_matrixfile.py  test_provision.py  test_query_workload.py  test_reap.py  test_receiver.py  test_report.py  test_spec.py  test_template.py
tests/fixtures/: queries-benicia-real.json
